# Document_analyzer-operator

./: .gitignore  LLM_IMPLEMENTATION_SUMMARY.md  LLM_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SETTINGS_QUICKSTART.md  TROUBLESHOOTING.md  VALIDATION_REPORT.md  clean.bat  clean.sh  docker-compose.yml  quick_setup.sh  setup.bat  setup.sh  setup_auto.bat  setup_auto.ps1  setup_auto.sh  start-frontend.bat  start-frontend.sh  start.bat  start.sh  stop.sh
backend/: .env.example  .env.native.example  .gitignore  AGENT_FRAMEWORK.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TEMPORAL_SETUP.md  WORKFLOW_EXAMPLES.md  alembic.ini  docker-compose.yml  ecosystem.config.js  pyproject.toml  pyproject_temporal.toml  run_native.bat  run_native.sh  setup_native.bat  setup_native.sh  start.bat  start.sh  test_agent_framework.py
backend/alembic/: env.py
backend/alembic/versions/: 20260101_000000_initial_schema.py  20260101_000100_add_llm_providers.py  20260101_000200_add_settings.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: deps.py
backend/app/core/: logging_config.py  runtime_settings.py  security.py  settings.py
backend/app/db/: __init__.py  session.py
backend/app/knowledge/: __init__.py  knowledge_graph.py  knowledge_repository.py  services.py  session_memory.py  vector_store.py
backend/app/models/: __init__.py  agent.py  agent_metric.py  agent_session.py  agent_type.py  application_setting.py  base.py  knowledge_entity.py  llm_provider.py  llm_usage.py  setting_audit_log.py  task.py  user.py  validation_result.py  workflow.py  workflow_execution.py  workspace.py
backend/app/schemas/: __init__.py  agent.py  agent_metric.py  agent_session.py  application_setting.py  auth.py  llm_provider.py  token.py  user.py
backend/app/services/: __init__.py  agent_service.py  llm_client.py  llm_client_openai_compatible.py  llm_provider_service.py  settings_service.py  user_service.py
backend/app/tools/: __init__.py  ai_tools.py  automation_tools.py  base.py  data_tools.py  document_tools.py  web_tools.py
backend/app/utils/: async_utils.py  security_utils.py  telemetry.py
backend/app/websocket/: __init__.py  events.py  manager.py
backend/app/workflow/: __init__.py  (+7 more)
backend/config/: database.py  native_config.py
backend/docs/: LLM_PROVIDERS.md  SETTINGS_MANAGEMENT.md
backend/scripts/: check_services.sh  generate_env.py  health_check.sh  init_database.py  redis_config.conf  setup_database.sh  setup_database.sql  setup_redis.sh
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_knowledge.py  test_security.py  test_tools.py
(+175 files in other folders)
